--- a/Paper/latex/result.tex
+++ b/Paper/latex/result.tex
@@ -40,23 +40,23 @@
 	% Static k Table
 	\begin{table}[h]
 	
-		\begin{tabular}{cccccccc}
+		\begin{tabular}{ccccccc}
 			\toprule
-			Epoch & \shortstack{ k \\ Static } & \shortstack{HR@1 } & \shortstack{HR@10} & \shortstack{HR@5} & \shortstack{HR@200 } & \shortstack{MRR } & \shortstack{NDCG} \\
+			Epoch  & \shortstack{HR@1 } & \shortstack{HR@10} & \shortstack{HR@5} & \shortstack{HR@200 } & \shortstack{MRR } & \shortstack{NDCG} \\
 			\midrule
-			1  & 49  & 0.0000  & 0.0000  & 0.0426  & 0.2128  & 0.0032  & 0.0338  \\  \hline
-			2  & 49  & 0.0000  & 0.0284  & 0.1135  & 0.3333  & 0.0117  & 0.0623  \\  \hline
-			3  & 49  & 0.0000  & 0.0567  & 0.1418  & 0.3759  & 0.0200  & 0.0767  \\  \hline
-			4  & 49  & 0.0000  & 0.0638  & 0.1348  & 0.4043  & 0.0238  & 0.0842  \\  \hline
-			5  & 49  & 0.0000  & 0.0496  & 0.1631  & 0.3972  & 0.0244  & 0.0842  \\  \hline
-			6  & 49  & 0.0000  & 0.0496  & 0.1560  & 0.4113  & 0.0219  & 0.0838  \\  \hline
-			7  & 49  & 0.0000  & 0.0496  & 0.1702  & 0.4043  & 0.0253  & 0.0864  \\  \hline
-			8  & 49  & 0.0000  & 0.0567  & 0.1773  & 0.4255  & 0.0260  & 0.0906  \\  \hline
-			9  & 49  & 0.0142  & 0.0638  & 0.2057  & 0.4326  & 0.0334  & 0.0980  \\  \hline
-			10 & 49  & 0.0213  & 0.0709  & 0.2128  & 0.4539  & 0.0411  & 0.1081  \\  
+			1    & 0.0000  & 0.0000  & 0.0426  & 0.2128  & 0.0032  & 0.0338  \\  \hline
+			2    & 0.0000  & 0.0284  & 0.1135  & 0.3333  & 0.0117  & 0.0623  \\  \hline
+			3    & 0.0000  & 0.0567  & 0.1418  & 0.3759  & 0.0200  & 0.0767  \\  \hline
+			4    & 0.0000  & 0.0638  & 0.1348  & 0.4043  & 0.0238  & 0.0842  \\  \hline
+			5    & 0.0000  & 0.0496  & 0.1631  & 0.3972  & 0.0244  & 0.0842  \\  \hline
+			6    & 0.0000  & 0.0496  & 0.1560  & 0.4113  & 0.0219  & 0.0838  \\  \hline
+			7    & 0.0000  & 0.0496  & 0.1702  & 0.4043  & 0.0253  & 0.0864  \\  \hline
+			8    & 0.0000  & 0.0567  & 0.1773  & 0.4255  & 0.0260  & 0.0906  \\  \hline
+			9    & 0.0142  & 0.0638  & 0.2057  & 0.4326  & 0.0334  & 0.0980  \\  \hline
+			10   & 0.0213  & 0.0709  & 0.2128  & 0.4539  & 0.0411  & 0.1081  \\  
 			\bottomrule
 		\end{tabular}
-		\caption{Performance of Static k (MoL) Model Across Epochs}
+		\caption{Performance of (MoL) Model Across Epochs}
 		\label{tab:static_k}
 	\end{table}
 	
@@ -71,7 +71,7 @@
 	\begin{figure}[ht]
 	\centering
 	\includegraphics[width=1.3\textwidth]{comparision.PNG}  
-	\caption{Performance Comparison: Dynamic vs Static k}
+	\caption{Performance Comparison: of (Hybrid) Model vs (MoL) Model }
 	\label{fig:image1}
 \end{figure}
 
